# aw-tauri

./: package-lock.json  package.json
.github/workflows/: build.yml  release.yml
aw-tauri-v2/src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  manager.rs
