[package]
name = "aw-tauri"
version = "0.0.0"
description = "ActivityWatch UI built with Tauri"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
repository = "https://github.com/ActivityWatch/aw-tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
#[cfg(unix)]
nix = { version = "0.28.0", features = ["process", "signal"] }
#[cfg(windows)]
winapi = { version = "0.3", features = ["winuser"] }
aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
tauri-plugin-shell = "2.0.0-beta.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints.clippy]
single_match = "allow"

[workspace]
